--- a/docs/daily/2025-07/2025-07-10.md
+++ b/docs/daily/2025-07/2025-07-10.md
@@ -1,3 +1,6 @@
 # 2025-7-10
 
-123123
+屋里灯光昏黄，像一碗洒在床头的热汤。我刚出生的女儿蜷在襁褓里，咿咿呀呀，小手在空中晃得像在抓梦。我妈坐在摇椅上，脊背微驼，抱着她一点点晃着，嘴里唱着那首我小时候最烦、现在却几乎快忘了的儿歌——“小燕子，穿花衣……”
+
+她的歌声带着浓浓的方言腔调，声音柔和流畅，带着一种温暖的韵味。可孩子居然听得出神，眼睛眨也不眨，像是听懂了。
+我站在门边，看她那双满是老茧的手一下一下拍着孩子的背，那是我三十年前听惯的节奏。我突然觉得，岁月并不全是把人推老，有时候，它也悄悄地把爱一代一代地传下去了。
