--- a/docs/daily/2025-07/2025-07-18.md
+++ b/docs/daily/2025-07/2025-07-18.md
@@ -7,7 +7,9 @@
 
 今天看了电影《长安的荔枝》非常开心，蛮不错的，荒诞的讽刺，我觉得基本还原的原著的剧情，但是有些地方刻画显得有些俗套，总的来说差强人意。就是隔壁有个女人一直在嗑瓜子，还一直问旁边的人这个是谁那个是谁。
 国名素质何时能够提高？真的把我恶心到了。
-
+[![微信图片_20250718225913.jpg](https://youke1.picui.cn/s1/2025/07/18/687a615356e85.jpg)](https://youke1.picui.cn/s1/2025/07/18/687a615356e85.jpg)
+[![微信图片_20250718225920.jpg](https://youke1.picui.cn/s1/2025/07/18/687a61568b8e2.jpg)](https://youke1.picui.cn/s1/2025/07/18/687a61568b8e2.jpg)
+[![微信图片_20250718225916.jpg](https://youke1.picui.cn/s1/2025/07/18/687a615635fea.jpg)](https://youke1.picui.cn/s1/2025/07/18/687a615635fea.jpg)
 
 体重：111KG->109.3KG
 ## 📅 饮食记录
