--- a/docs/daily/2025-07/2025-07-18.md
+++ b/docs/daily/2025-07/2025-07-18.md
@@ -27,8 +27,8 @@
 ## 🥗 中餐
 | 食物     | 分量                       | 热量估算（kcal） | 备注                    |
 |----------|----------------------------|------------------|-------------------------|
-| 沙拉轻食 | 鸡胸肉约100g + 生蔬菜混合 | ~300             | 低脂高蛋白，轻调料      |
-| **小计** |                            | **300 kcal**     |                         |
+| 鸡胸肉拌饭 | 鸡胸肉约100g + 米饭生蔬菜混合 | ~500             | 低脂高蛋白，轻调料      |
+| **小计** |                            | **500 kcal**     |                         |
 
 ---
 
@@ -46,6 +46,6 @@
 | 餐次 | 热量（kcal） |
 |------|--------------|
 | 早餐 | 247          |
-| 中餐 | 300          |
+| 中餐 | 500          |
 | 晚餐 | 320          |
-| **总计** | **867 kcal**  |
+| **总计** | **1067 kcal**  |
