--- a/docs/daily/2025-07/2025-07-21.md
+++ b/docs/daily/2025-07/2025-07-21.md
@@ -1,41 +1,14 @@
 # 2025-07-21
+
 ::: tip
 晴 周一 加班
 :::
+昨天真是烦透了，一整天都在忙，心情本来就紧张，结果老婆给我发了个狗吃葡萄的视频，看得我头皮发麻。之前跟她说过好多次葡萄对狗不好，可她就是不听。视频里小狗明明活蹦乱跳的，我却一点也高兴不起来。
 
-真挺烦的，狗吃了
+我不停问它怎么样了，有没有不舒服，老婆那边回复“活蹦乱跳”，但我心里就是没底。我劝她要不要催吐，万一出问题了赶紧看医生，但她说一个人不行，又说老妈说没事。我当时真无语，感觉她们根本不把小狗当回事，老妈甚至还不喜欢小狗，感觉她们都在摆烂。
 
-Mose:
-它现在怎么样
-Mose:
-不舒服吗
-sparkling:
-活蹦乱跳的
-Mose:
-。。。
-Mose:
-你看看要不要催吐什么的
-Mose:
-不行看医生
-Mose:
-消化了肯定来不及了
-Mose:
-有的狗吃了没事
-Mose:
-有的狗吃了就死了
-sparkling:
-催吐我一个人不行啊
-sparkling:
-老妈说没事的
-Mose:
-真服你
-Mose:
-摆烂了呗
-Mose:
-老妈巴不得小狗死啊，她不喜欢小狗
-Mose:
-你也巴不得是嘛
-sparkling:
-你一遇到事情就开始攻击
-Mose:
-现在是讨论攻不攻击的事情啊
+后来我九点回到家，给狗喂了点双氧水，幸好它都吐出来了，算是避免了更严重的后果。真心希望以后老婆能重视点，别再让我这么揪心了。
+
+今天真是心烦意乱的一天，工作压力加上这事，整个人都没法放松。希望小狗能快点恢复，也希望以后别再出这种幺蛾子了。
+
+
