--- a/docs/daily/2025-07/2025-07-21.md
+++ b/docs/daily/2025-07/2025-07-21.md
@@ -12,3 +12,5 @@
 今天真是心烦意乱的一天，工作压力加上这事，整个人都没法放松。希望小狗能快点恢复，也希望以后别再出这种幺蛾子了。
 
 
+
+![微信图片_20250722175446.jpg](https://youke1.picui.cn/s1/2025/07/22/687f600255b0e.jpg)
